# Dihedrals

./: .gitignore  Cargo.toml  README.md  predict_connected.py  predict_ts.py  requirements.txt
.github/workflows/: rust-ci.yml
PATHSAMPLE/: coords.inpcrd  coords.prmtop  min.data  min.in  odata.connect  pathdata  ts.data
code/connection-network/: Cargo.toml
code/connection-network/src/: lib.rs
code/create-hist/: Cargo.toml
code/create-hist/src/: main.rs  setup_model.rs
code/dihedrals2csv/: Cargo.toml
code/dihedrals2csv/src/: main.rs
code/eval-cx/: Cargo.toml
code/eval-cx/src/: main.rs  setup_model.rs
code/parse-dihedrals/: Cargo.toml
code/parse-dihedrals/src/: lib.rs
code/parse-tsdata/: Cargo.toml
code/parse-tsdata/src/: lib.rs
code/select-random/: Cargo.toml
code/select-random/src/: main.rs
code/setup-connections/: Cargo.toml
code/setup-connections/src/: main.rs
code/setup-train/: Cargo.toml
code/setup-train/src/: main.rs
code/test-connected/: Cargo.toml
code/test-connected/src/: main.rs  nn_arch.rs  setup_model.rs
code/train/: Cargo.toml
code/train/src/: main.rs  nn_arch.rs  setup_training.rs
