[package]
name = "eval-cx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parse-dihedrals = {workspace = true}
parse-tsdata = {workspace = true}
candle-core = {workspace = true}
candle-nn = {workspace = true}
connection-network = {workspace = true}
rand = {workspace = true}
anyhow = {workspace = true}
bytemuck = {workspace = true}
log = {workspace = true}
env_logger = {workspace = true}
rayon = {workspace = true}

[lints]
workspace = true
