[package]
name = "setup-train"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parse-dihedrals = {workspace = true}
parse-tsdata = {workspace = true}
candle-core = {workspace = true}
candle-nn = {workspace = true}
rand = {workspace = true}
anyhow = {workspace = true}

[lints]
workspace = true
