[package]
name = "train"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-core = {workspace = true}
candle-nn = {workspace = true}
candle-optimisers = {workspace = true}
env_logger = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-optimisers/cuda"]
cudnn = ["cuda", "candle-core/cudnn"]

[lints]
workspace = true
